refactor(meeting): AI工具直接返回结构化record由Spring AI序列化
- @Tool方法从返回String改为直接返回结构化record/List，由DefaultToolCallResultConverter序列化为JSON
- 新增ReservationBrief/AttendeeBrief工具专用record，时间字段格式化为String(HH:mm/yyyy-MM-dd HH:mm)，屏蔽敏感字段
- 新增ToolResult.ErrorResult统一错误语义，移除RoomListResult/RoomStatsResult/ReservationListResult等展示型wrapper
- 删除ToolResponseFormatter，展示文案交由system prompt与模型组织
- CommonTool时间工具返回格式化String而非LocalDateTime
- system prompt补充工具JSON返回与时间格式说明